FIXED SLIDES
slick elements have been amended using jQuery by setting height to auto to remove extra space
lots of CSS removed

--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,14 @@ nav {
 
 /*end of navbar styling*/
 
-.main-sec {
+/* .main-sec {
     margin: 5% auto;
     height: auto;
 }
 
 .slide-sec {
     padding: 5%;
-}
+} */
 
 /*Default styles for slider*/
 
@@ -40,11 +40,11 @@ nav {
     flex-direction: row;
 }
 
-.singlecard-header {
+.singlecard-header img {
     width: 50vw;
 }
 
-.singlecard-header img {
+/* .singlecard-header img {
     width: 50vw;
     max-width: 100%;
     height: auto;
@@ -55,6 +55,11 @@ nav {
     padding-right: 1vw;
     width: 50vw;
 }
+
+.singlecard-text {
+    justify-content: center;
+}
+*/
 
 .slick-prev,
 .slick-next {
@@ -72,7 +77,7 @@ nav {
 
 /*Media query for smaller screens*/
 
-@media screen and (max-width: 992px) {
+ @media screen and (max-width: 992px) {
     .singlecard {
         flex-direction: column;
     }
@@ -86,4 +91,4 @@ nav {
         max-width: 100%;
         height: auto;
     }
-}
+} 
